syntax = "proto3";
package user;

option go_package = "proto/user";

import "google/api/annotations.proto";

// Defines a user RPC service, with REST annotations
service UserService {
    // Get a user
    rpc Get (UserGetRequest) returns (UserResponse) {
        option (google.api.http).get = "/users/{id}";
    }

    // Create a new user
    rpc Create (UserCreateRequest) returns (UserResponse) {
        option (google.api.http) = {
            post: "/users"
            body: "*"
        };
    }
}

message UserCreateRequest {
    string name = 1;
    int32 age = 2;
}

message UserGetRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    int32 age = 3;
}